compiler/frontends/spar/testsuite/errnomacro.err
errnomacro.spar:7: syntax error
    public inline static void main()
                  ^^^^^^
cannot recover from earlier parse errors, goodbye
